dwk-frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dwk-todos
  name: dwk-frontend-deploy
  labels:
    app: dwk-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-frontend
  template:
    metadata:
      labels:
        app: dwk-frontend
    spec:
      containers:
      - name: flask
        image: bcerney/dwk-frontend:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 5000
      restartPolicy: Always
