dwk-frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dwk-todos
  name: dwk-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: dwk-frontend
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
